...

    private static func writeEndToEndFixture(to url: URL) throws {
        let opf = """
        <?xml version="1.0" encoding="UTF-8"?>
        <package xmlns="http://www.idpf.org/2007/opf" version="3.0">
          <metadata xmlns:dc="http://purl.org/dc/elements/1.1/">
            <dc:title>端到端测试图书</dc:title><dc:creator>测试作者</dc:creator><dc:language>zh-CN</dc:language>
          </metadata>
          <manifest>
            <item id="nav" href="nav.xhtml" media-type="application/xhtml+xml" properties="nav"/>
            <item id="one" href="Text/one.xhtml" media-type="application/xhtml+xml"/>
            <item id="two" href="Text/two.xhtml" media-type="application/xhtml+xml"/>
          </manifest>
...
                path: "META-INF/container.xml",
                source: .data(Data(#"<?xml version="1.0"?><container><rootfiles><rootfile full-path="OPS/package.opf"/></rootfiles></container>"#.utf8))
            ),
            ZipWriteEntry(path: "OPS/package.opf", source: .data(Data(opf.utf8))),
            ZipWriteEntry(
                path: "OPS/nav.xhtml",
                source: .data(Data(#"<?xml version="1.0"?><html xmlns="http://www.w3.org/1999/xhtml"><body><nav><ol><li><a href="Text/one.xhtml">第一章</a></li><li><a href="Text/two.xhtml">第二章</a></li></ol></nav></body></html>"#.utf8))
            ),
            ZipWriteEntry(
                path: "OPS/Text/one.xhtml",
                source: .data(Data(#"<?xml version="1.0"?><html><body><p>这是第一章的端到端测试正文。</p></body></html>"#.utf8))
            ),
            ZipWriteEntry(
...
        case .failed: .failed
        }
    }

    private static let previewBooks: [BookSnapshot] = [
        BookSnapshot(
            id: UUID(), title: "漫长的旅程", author: "林知远", chapterCount: 24,
            completedChapterCount: 10, progress: 0.42, status: .converting,
            estimatedHours: 11,
            chapters: makeChapters(count: 24, completed: 10, current: 11),
            coverURL: nil,
            coverColor: .blue, coverSymbol: "mountain.2.fill"
        ),
...
